# runic

./: .gitignore  README.md  basic.rn  brittany.yaml  final.cabal  runic.cabal  stack.yaml  test.cpp  test.ll  test.rn
app/: Interpreter.hs  Main.hs  Parser.hs  Pretty.hs  Typecheck.hs  Util.hs
src/: Runic.hs
src/Runic/: Codegen.hs  Context.hs  Interpreter.hs  Parser.hs  Pretty.hs  Typecheck.hs  Types.haskell.hs  Types.hs  Util.hs
test/: Main.hs
