cabal-version:      2.4
name:               final
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yusuf Bham
maintainer:         ybham6@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable final
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parser, Interpreter, Typecheck

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0
                      , containers >= 0.6.5.1
                      , megaparsec >= 9.0.0
                      , pretty-simple >= 4.0.0.0
                      , transformers >= 0.5.6
                      , llvm-hs-pure
                      , llvm-hs-pretty >= 0.9.0.0
                      , mtl
                      , text
                      , string-conversions
    ghc-options:        -Wall
                        -Wno-unused-matches
                        -Wincomplete-patterns
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: ScopedTypeVariables
                      , OverloadedStrings
                      , TypeFamilies
                      , TypeApplications
                      , InstanceSigs
                      , KindSignatures
                      , LambdaCase
                      , TupleSections
                      , FlexibleInstances
                      , FlexibleContexts
                      , NoMonomorphismRestriction
                      , DeriveFunctor
                      , DeriveFoldable
                      , DeriveTraversable
                      , GeneralizedNewtypeDeriving
