cabal-version:      2.4
name:               runic
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A small functional language

-- The license under which the package is released.
author:             Yusuf Bham
maintainer:         ybham6@gmail.com

license:            MPL-2.0
license-file:       LICENSE

library
    hs-source-dirs:     src

    exposed-modules:    Runic
                      , Runic.Parser
                      , Runic.Interpreter
                      , Runic.Typecheck
                      , Runic.Pretty

    -- Modules included in this executable, other than Main.
    other-modules: Runic.Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0
                      , containers >= 0.6.5.1
                      , megaparsec >= 9.0.0
                      , pretty-simple >= 4.0.0.0
                      , optparse-applicative
                      , mtl
                      , text
                      , prettyprinter
                      , prettyprinter-ansi-terminal
                      , parser-combinators
                      -- , llvm-hs-pure
                      -- , llvm-hs-pretty >= 0.9.0.0

    ghc-options:        -Wall
                        -Wno-unused-matches
                        -Wincomplete-patterns

    default-language:   Haskell2010

    default-extensions: ScopedTypeVariables
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , TypeFamilies
                      , TypeApplications
                      , InstanceSigs
                      , KindSignatures
                      , LambdaCase
                      , RecordWildCards
                      , TupleSections
                      , FlexibleInstances
                      , FlexibleContexts
                      , NoMonomorphismRestriction
                      , MultiWayIf
                      , DeriveFunctor
                      , DeriveFoldable
                      , DeriveTraversable
                      , GeneralizedNewtypeDeriving

executable runic
    main-is:            Main.hs

    hs-source-dirs:     app

    build-depends:      base ^>= 4.14.3.0
                      , runic

test-suite quickcheck
    type:               exitcode-stdio-1.0

    main-is:            Main.hs

    build-depends:      base ^>= 4.14.3.0
                      , HUnit >= 1.6
                      , QuickCheck >= 2.14
                      , megaparsec
                      , text
                      , containers
                      , mtl
                      , runic

    ghc-options:        -Wall
                        -Wno-unused-matches
                        -Wincomplete-patterns

    hs-source-dirs:     test

    default-language:   Haskell2010

    default-extensions: MultiParamTypeClasses
                      , FlexibleInstances
                      , TupleSections
